syntax = "proto3";

package grpc;

option go_package = "proto/grpc";

service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  string access_token = 2;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 2;
}
